fix: address compiler warnings